# ROSConDemo

./: .gitattributes  .gitignore  .lfsconfig  CONTRIBUTING.md  LICENSE-CC-BY-4.0.txt  LICENSE-CC-BY-NC-4.0.txt  LICENSE.txt  README.md
.github/: CODEOWNERS  issue_template.md
Project/: .gitignore  CMakeLists.txt  autoexec.cfg  game.cfg  project.json  project.json.bak0
Project/AssetBundling/SeedLists/: ROSCon2022.seed
Project/Assets/: apple_kraken.urdf
Project/Assets/Animations/: AppleAnime.fbx
Project/Assets/Barn/: Barn.fbx  Barn.fbx.assetinfo  Barn_BarnMAT.material  Barn_TinRoofMAT.material  Barn_WindowGlassMAT.material  (+5 more)
Project/Config/: shader_global_build_options.json
Project/Gem/: CMakeLists.txt  enabled_gems.cmake  gem.json  robot_harvesting_sample_files.cmake  robot_harvesting_sample_shared_files.cmake  roscondemo_editor_files.cmake  roscondemo_editor_shared_files.cmake  roscondemo_files.cmake  roscondemo_shared_files.cmake
Project/Gem/Include/ROSConDemo/: ROSConDemoBus.h
Project/Gem/Include/RobotHarvestingSample/: RobotHarvestingSampleBus.h
Project/Gem/Platform/Android/: PAL_android.cmake  robot_harvesting_sample_android_files.cmake  robot_harvesting_sample_shared_android_files.cmake
Project/Gem/Platform/Common/Clang/: exceptions_clang.cmake
Project/Gem/Platform/Common/msvc/: exceptions_msvc.cmake
Project/Gem/Platform/Linux/: roscondemo_linux_files.cmake
Project/Gem/Platform/Mac/: PAL_mac.cmake  robot_harvesting_sample_mac_files.cmake  roscondemo_shared_mac_files.cmake
Project/Gem/Platform/Windows/: robot_harvesting_sample_windows_files.cmake
Project/Gem/Platform/iOS/: roscondemo_ios_files.cmake
Project/Gem/Registry/: assetprocessor_settings.setreg
Project/Gem/Scripts/: apple_kraken_manipulator.lua  manipulator_control.inputbindings  mobile_robot_control_keyboard.inputbindings
Project/Gem/Source/: ROSConDemoEditorModule.cpp  ROSConDemoEditorSystemComponent.cpp  ROSConDemoEditorSystemComponent.h  ROSConDemoModule.cpp  ROSConDemoModuleInterface.h  ROSConDemoSystemComponent.cpp  ROSConDemoSystemComponent.h  RobotHarvestingSampleModule.cpp  RobotHarvestingSampleSystemComponent.cpp  RobotHarvestingSampleSystemComponent.h  SunShaftsFeatureProcessor.cpp  SunShaftsFeatureProcessor.h
Project/Gem/Source/ApplePicker/: AppleDetectionGroundTruth.cpp  AppleDetectionGroundTruth.h  ApplePickerComponent.cpp  ApplePickerComponent.h  ApplePickingNotifications.h  ApplePickingRequests.h  GatheringRowComponent.cpp  GatheringRowComponent.h  GatheringRowRequests.h  KrakenEffectorComponent.cpp  KrakenEffectorComponent.h  ManipulatorRequestBus.cpp  ManipulatorRequestBus.h  PickingStructs.h
Project/Gem/Source/DemoStatistics/: AppleEvent.h  DemoStatisticsComponent.cpp  DemoStatisticsComponent.h  DemoStatisticsNotifications.h
Project/Gem/Source/FruitStorage/: FruitStorageBus.h  FruitStorageComponent.cpp  FruitStorageComponent.h
Project/Gem/Source/KrakenCamera/: CameraJoySubscriber.cpp  CameraJoySubscriber.h  FollowingCameraComponent.cpp  FollowingCameraComponent.h
Project/Gem/Source/Manipulator/: KrakenManipulatorController.cpp  KrakenManipulatorController.h  ManipulatorJoySubscriber.cpp  ManipulatorJoySubscriber.h  ManipulatorRequestBus.cpp  ManipulatorRequestBus.h
Project/Passes/: SunShaftsFullScreenPass.pass  SunShaftsFullScreenPassRequest.azasset  SunShaftsPassTemplates.azasset
Project/Prefabs/: Apple.prefab  AppleTree.prefab  AppleTreeActor.prefab  AppleTreeApples.prefab  AppleTreeGroup4.prefab  AppleTreeNoApples.prefab  AppleTreeRow.prefab  AppleTreeRowLowSpec.prefab  Apple_Crate.prefab  Apple_Crate_empty.prefab  ApplesTreeApplesMerged.prefab  Backhground_Mountains.prefab  Barn.prefab  Barrel.prefab  Crate.prefab  FenceTile.prefab  FlowerOne.prefab  FlowerTwo.prefab  FlowerTwoPink.prefab  GrassTileLageDry.prefab  GrassTileLarge.prefab  GrassTileMed.prefab  GrassTileMedDry.prefab  GrassTileSmall.prefab  GrassTileSmallDry.prefab  GroundAckermannTest.prefab  Leaf_Animation.prefab  LidarKraken.prefab  OakTree.prefab  PowerLines.prefab  TreeActor_Anime.prefab  TreeActor_Anime_one.prefab  Tree_Actor.prefab  UILogic.prefab  WagonWheel.prefab  WaterTower.prefab  WindMill.prefab
Project/ReflectionProbes/: RefProbMain__C4EE43E2-3FFE-4955-9DEE-679CA04C2A53__iblspecularcm256.dds
Project/Registry/: assetprocessor_settings.setreg  autoexec.game.setreg  awscoreconfiguration.setreg  editorhelpersvisibility.setreg  physxdebugconfiguration.setreg  physxdefaultsceneconfiguration.setreg  physxsystemconfiguration.setreg  sceneassetimporter.setreg
Project/Scripts/: DynamicAppleSpawner.lua  UIGameplayEventButton.lua  UILogic.lua
Project/ShaderLib/: README.md  scenesrg.srgi  viewsrg.srgi
Project/Shaders/: SunShaftsFullScreen.azsl  SunShaftsFullScreen.shader
Project/Ui/: GameCanvas.uicanvas  JoyStick.uicanvas  QuitConfirmation.uicanvas
Project/cmake/: EngineFinder.cmake
Project/detail_terrain/: detail_terrain.material  terrain_plane.fbx
Project/scriptCanvas/: Apple.scriptcanvas  AppleSpawner.scriptcanvas  CarSpawner.scriptcanvas  Leaf.scriptcanvas  Leaf_Animation.scriptcanvas  TreeActor.scriptcanvas  TurnOnLeaf.scriptevents  WindMill.scriptcanvas
docker/: Dockerfile  Dockerfile.NavStack  Dockerfile.Simulation  README.md  o3de_2.1.0.patch
docs/ImportingURDF/: URDF_import_guide.md
docs/URDF_import/: HOWTO_import_urdf.md
docs/design/: apple_tree_function_requirements.md
kraken_nav/: README.md  package.xml  setup.cfg  setup.py
kraken_nav/launch/: navigation.launch.py  navigation_multi.launch.py  slam.launch.py  teleop.launch.py
kraken_nav/o3de_kraken_nav/: package.xml  setup.py  twist_to_ackermann.py
kraken_nav/o3de_kraken_nav/launch/: navigation.launch.py  navigation_multi.launch.py  teleop.launch.py
kraken_nav/o3de_kraken_nav/launch/config/: config.rviz  config_multi.rviz  navigation_multi_params.yaml  navigation_params.yaml  slam_multi_params.yaml  slam_params.yaml
kraken_nav/o3de_kraken_nav/o3de_kraken_nav/: __init__.py  joy_to_ackermann.py  twist_to_ackermann.py
kraken_nav/o3de_kraken_orchestration/: package.xml  setup.cfg  setup.py
(+243 files in other folders)
